--- a/css/style.css
+++ b/css/style.css
@@ -156,3 +156,72 @@ h6 {
 
   opacity: 0px;
 }
+.main__use {
+  margin-top: 150px;
+}
+.card-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 20px 15px;
+  border-top: 1px solid;
+  border-bottom: 1px solid;
+  border-color: rgba(191, 191, 191, 1);
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr 1fr;
+  gap: 30px;
+}
+.card-item {
+  width: 270px;
+  height: 180px;
+  position: relative;
+}
+.card-face {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  backface-visibility: hidden;
+  transition: all 1s;
+}
+.card-back {
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 8px;
+  transform: rotateY(180deg);
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  transition: all 1s;
+}
+.card-item:hover .card-face {
+  transform: rotateY(180deg);
+  transform-style: preserve-3d;
+  perspective: 1000px;
+}
+.card-item:hover .card-back {
+  transform: rotateY(0deg);
+  transform-style: preserve-3d;
+  perspective: 1000px;
+}
+.cards-title {
+  font-family: Roboto;
+  font-size: 36px;
+  font-weight: 600;
+  line-height: 48px;
+  letter-spacing: 0.04em;
+  text-align: left;
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+.cards-title::before {
+  content: "";
+  width: 100px;
+  height: 8px;
+  background: rgba(0, 0, 0, 1);
+  margin-right: 20px;
+}
